rns-lang/tests/snapshots/err-parser-class_directive-header-trailing_tokens-string_literal.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld "extra string"
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: unexpected string literal after class name
   ╭─[ test_data/integration/err/parser/class_directive/header/trailing_tokens/string_literal.ja:1:26 ]
   │
 1 │ .class public HelloWorld "extra string"
   │                          ───────┬──────  
   │                                 ╰──────── string literals are not allowed here
   │ 
   │ Note: String literals belong inside '.code' blocks as instruction arguments.
───╯
